add 'batch' endpoint for creating activities
